# matchbox-alpha

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: grep.mb  nanobody.mb  parseseq.mb  restrander.mb
src/: lang.rs  main.rs  myers.rs  util.rs
src/lang/: ast.rs
src/lang/ast/: core.rs  parse.rs  read.rs
src/lang/ast/core/: elab.rs  eval.rs  handler.rs  matcher.rs  subs.rs  visit.rs
src/lang/ast/core/eval/: apply.rs
src/lang/ast/core/matcher/: elab.rs  eval.rs  subs.rs
