[package]
name = "matchbox-alpha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "*"
itertools = "*"
ratatui = "*"
tui = "*"
crossterm = "*"
eyre = "*"
clap = { version = "4.4.10", features = ["derive"] }
crossbeam = "*"
csv = "*"
needletail = "*"
rayon = "*"
peg = "*"
seq_io = "*"
flate2 = { version = "*", features = ["zlib-ng"] }
rustyline = "*"
bumpalo = "*"
indicatif = "*"
noodles = { version = "0.83.0", features = ["sam"] }
